--- a/AdventOfCode/AdventOfCode.fsproj
+++ b/AdventOfCode/AdventOfCode.fsproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <Compile Include="Day1.fs" />
     <Compile Include="Day2.fs" />
+    <Compile Include="Day3.fs" />
     <Compile Include="InputLoader.fs" />
     <Compile Include="Program.fsx" />
   </ItemGroup>
